ghc-4335c07/testsuite/tests/parser/should_fail/T13260.hs
{-# LANGUAGE MagicHash #-}

module T13260 where

  g y = case y of
    "a"# -> True
    _    -> False
