ghc-4335c07/testsuite/tests/parser/should_fail/T13260.stderr

T13260.hs:6:5: error:
    Illegal unboxed string literal in pattern:
    "a"#
